# django-cms-superset-plugin

./: MANIFEST.in  README.rst  setup.cfg
django_cms_superset_plugin/: admin.py  apps.py  cms_plugins.py  forms.py  models.py
django_cms_superset_plugin/templates/django_cms_superset_plugin/: superset_plugin.html
