[metadata]
name = django_cms_superset_plugin
version = 1.0.0
description = Django CMS plugin for embedding Superset dashboards.
long_description = file: README.rst
url = https://github.com/gabrielheck/django-cms-superset-plugin
author = Gabriel Heck
author_email = 
license = GNU GENERAL PUBLIC LICENSE 3.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.0